--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
     <div>
         <div>
             <div>
@@ -79,7 +79,7 @@
                                         <h2 class="mbr-section-title display-1">&nbsp;_<br>Christian Represent<br> Platform</h2>
                                         <p class="mbr-section-lead lead"><span style="font-style: normal;">크리스천 대표 플랫폼</span></p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-primary" href="https://www.cplatform.io">백서 DOWNLOAD</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-warning" href="https://www.cplatform.io">백서 DOWNLOAD</a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -776,7 +776,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="7BEMC8Uk3i5iyyUuwZYAVkUatk6Y0l8pHH9K6NTAu1ak7vnJjCzJ+kKpXgSm0YnCN9mcUq/mhZE2kuQAgCHW7/aaBtvm7hxbrgopv96oVlQveRWlIrsTJYffybvPQUMa" data-form-email="true">
+                    <input type="hidden" value="QwSU5MmIF1sZV+bHbp/F1b4XHcMxKbWuyrzBBU0BlWUTKZyHkFX4rh4sc7T027nfBBbr9tL841JzTMIdzRvhmqa8gdMJ+Kvcfl8tJxtCxm66vrjwlwct2g/inaKdkiIV" data-form-email="true">
 
                     
 
