--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
     <div>
         <div>
             <div>
@@ -211,17 +211,6 @@
             <div class="col-xs-12">
                 <h3 class="mbr-section-title display-2">CHRISTIAN CULTURE CHANGE</h3>
                 <small class="mbr-section-subtitle">로마서 8:28 </small>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="mbr-section mbr-section__container article" id="header3-1e" data-rv-view="31" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">ROADMAP</h3>
-                <small class="mbr-section-subtitle">2018-2020</small>
             </div>
         </div>
     </div>
@@ -380,7 +369,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <h3 class="mbr-section-title display-2">ROADMAP</h3>
-                
+                <small class="mbr-section-subtitle">2019-2020</small>
             </div>
         </div>
     </div>
@@ -776,7 +765,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="QwSU5MmIF1sZV+bHbp/F1b4XHcMxKbWuyrzBBU0BlWUTKZyHkFX4rh4sc7T027nfBBbr9tL841JzTMIdzRvhmqa8gdMJ+Kvcfl8tJxtCxm66vrjwlwct2g/inaKdkiIV" data-form-email="true">
+                    <input type="hidden" value="WcNr4cbUMgH7kWEUnNRQgTf64dPWvKn4Aw7D2/cNhgE7GTgw/evjLAfyrAnlemeDwGdclNwYP78w8q6SuXFO5cJ5Ea5kWnr322ecJnRoKT4ObjVFWekvcWDNBW3sB4p5" data-form-email="true">
 
                     
 
