--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <link rel="shortcut icon" href="assets/images/cplatform-ci-516x90.png" type="image/x-icon">
   <meta name="description" content="C·platform | 크리스천플랫폼">
   <title>C·platform | 크리스천플랫폼</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/et-line-font-plugin/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise-gallery/style.css">
   <link rel="stylesheet" href="assets/theme/css/style-rtl.css">
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-1c" data-rv-view="31" style="background-color: rgb(244, 134, 31); padding-top: 280px; padding-bottom: 280px;">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-1c" data-rv-view="31" style="background-image: url(assets/images/wirtschaft-der-freiheit-website-header-1-1301x671.jpg); padding-top: 200px; padding-bottom: 160px;">
 
     
     <div class="container">
@@ -93,6 +93,17 @@
         </div>
     </div>
 
+</section>
+
+<section class="mbr-section mbr-section__container article" id="header3-k" data-rv-view="29" style="background-color: rgb(0, 0, 0); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">CHRISTIAN CULTURE CHANGE</h3>
+                <small class="mbr-section-subtitle">로마서 8:28 </small>
+            </div>
+        </div>
+    </div>
 </section>
 
 <section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
@@ -234,17 +245,6 @@
                     <span class="icon-next" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="mbr-section mbr-section__container article" id="header3-k" data-rv-view="29" style="background-color: rgb(0, 0, 0); padding-top: 20px; padding-bottom: 20px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">CHRISTIAN CULTURE CHANGE</h3>
-                <small class="mbr-section-subtitle">로마서 8:28 </small>
             </div>
         </div>
     </div>
@@ -765,7 +765,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="Vo5tG2K16YyysUxMtUC1nsSYUNs5kGCrcrZ0bg4/GCDzprnIoB5dSNJyL7BZhiXPJGh8gjkB6GLhIt18R9WOCjk3WJWRHCTb8VDafY2T82Whtva7H1s/ioTakLrMcdPt" data-form-email="true">
+                    <input type="hidden" value="kr8puz7VJCMT+JxdBG6wSmwF2ulq7fnIXx6kF0zxvFbv8aEN/w7s8C5quml7tAt3Ysxsqhq/P/BxHUA+NGJVyFAP0oWT6pyLaXdHqKvVKUJo2U4Xh5miOOIr7S5NKGNJ" data-form-email="true">
 
                     
 
@@ -800,20 +800,20 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/jquery-mb-ytplayer/jquery.mb.ytplayer.min.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/masonry/masonry.pkgd.min.js"></script>
   <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
-  <script src="assets/mobirise-gallery/player.min.js"></script>
-  <script src="assets/mobirise-gallery/script.js"></script>
   <script src="assets/mobirise-slider-video/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
+  <script src="assets/mobirise-gallery/player.min.js"></script>
+  <script src="assets/mobirise-gallery/script.js"></script>
   
   
   <input name="animation" type="hidden">
