--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
 </head>
 <body class="rtl">
-  <section id="menu-0" data-rv-view="0">
+  <section id="menu-0" data-rv-view="5">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -61,9 +61,10 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-1c" data-rv-view="31" style="background-image: url(assets/images/wirtschaft-der-freiheit-website-header-1-1301x671.jpg); padding-top: 200px; padding-bottom: 160px;">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-1c" data-rv-view="0" style="background-image: url(assets/images/wirtschaft-der-freiheit-website-header-1-1301x671.jpg); padding-top: 200px; padding-bottom: 160px;">
 
-    
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
     <div class="container">
         <div class="row">
             <div class="mbr-table-md-up">
@@ -95,7 +96,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-k" data-rv-view="29" style="background-color: rgb(0, 0, 0); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-k" data-rv-view="3" style="background-color: rgb(0, 0, 0); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -106,7 +107,7 @@
     </div>
 </section>
 
-<section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
+<section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="7">
     <div>
         <div>
             <div>
@@ -765,7 +766,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="kr8puz7VJCMT+JxdBG6wSmwF2ulq7fnIXx6kF0zxvFbv8aEN/w7s8C5quml7tAt3Ysxsqhq/P/BxHUA+NGJVyFAP0oWT6pyLaXdHqKvVKUJo2U4Xh5miOOIr7S5NKGNJ" data-form-email="true">
+                    <input type="hidden" value="2C4LQEz/aoSMAGFXDLjFnQTyFzBZ3RL6H8PEDgZfgBV6pHo2BoL/4hF9DwSBnsKJcL27gTuyy91ap7Nuz84OgoPp6HjNJOtSsjW79AsdSBNe1+2aH5bnhvf4Vabbxfzy" data-form-email="true">
 
                     
 
@@ -816,7 +817,7 @@
   <script src="assets/mobirise-gallery/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
