--- a/index.html
+++ b/index.html
@@ -9,25 +9,24 @@
   <link rel="shortcut icon" href="assets/images/cplatform-ci-516x90.png" type="image/x-icon">
   <meta name="description" content="C·platform | 크리스천플랫폼">
   <title>C·platform | 크리스천플랫폼</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
-  <link rel="stylesheet" href="assets/et-line-font-plugin/style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
+  <link rel="stylesheet" href="assets/et-line-font-plugin/style.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise-gallery/style.css">
-  <link rel="stylesheet" href="assets/theme/css/style-rtl.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
 </head>
-<body class="rtl">
+<body>
   <section id="menu-0" data-rv-view="5">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
@@ -61,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-1c" data-rv-view="0" style="background-image: url(assets/images/wirtschaft-der-freiheit-website-header-1-1301x671.jpg); padding-top: 200px; padding-bottom: 160px;">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-1c" data-rv-view="0" style="background-image: url(assets/images/wirtschaft-der-freiheit-website-header-1-1301x671.jpg); padding-top: 200px; padding-bottom: 160px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -80,7 +79,7 @@
                   <h3 class="mbr-section-title display-2">크리스천 플랫폼</h3>
                   <div class="lead">
 
-                    <p>.C·Platform은 크리스천 공유경제 실현, 투명한 기부문화 확산, 건강한 가치증식을 추.구하는 크리스천 플랫폼입니다</p>
+                    <p>C·Platform은 크리스천 공유경제 실현, 투명한 기부문화 확산, 건강한 가치증식을 추.구하는 크리스천 플랫폼입니다.</p>
 
                   </div>
 
@@ -741,7 +740,7 @@
                         </li>
                         <li class="list-group-item">
                             <span class="list-group-icon"><span class="etl-icon icon-map-pin mbr-iconfont-company-contacts3"></span></span>
-                            <span class="list-group-text">(서울시 강남구 학동로19길 35,1층(논현동28-11&nbsp;<br></span>
+                            <span class="list-group-text">서울시 강남구 학동로19길 35,1층(논현동28-11)&nbsp;<br></span>
                         </li>
                         <li class="list-group-item active">
                             <span class="list-group-icon"><span class="etl-icon icon-envelope mbr-iconfont-company-contacts3"></span></span>
@@ -756,7 +755,7 @@
                 <ul><li><a href="index.html" class="text-warning">C·platform</a></li><li><a href="index.html" class="text-warning">NEWS</a></li><li><a href="index.html" class="text-warning">MISSION</a></li><li><a href="index.html" class="text-warning">ROADMAP</a></li><li><a href="index.html" class="text-warning">PARTNERS</a></li><li><a href="index.html">TEAM</a></li></ul>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
-                <p><strong>Contacts</strong><br>Email: support@cplatform.io<br>Phone: +82 10 5177 2299<br><br><br><strong>Partners</strong><br>06042<br>(서울시 강남구 학동로19길 35,1층(논현동28-11<br><br></p>
+                <p><strong>Contacts</strong><br>Email: support@cplatform.io<br>Phone: +82 10 5177 2299<br><br><br><strong>Partners</strong><br>06042<br>(서울시 강남구 학동로19길 35,1층(논현동28-11)<br><br></p>
             </div>
             <div class="col-xs-12 col-md-6 col-lg-3" data-form-type="formoid">
 
@@ -766,7 +765,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="2C4LQEz/aoSMAGFXDLjFnQTyFzBZ3RL6H8PEDgZfgBV6pHo2BoL/4hF9DwSBnsKJcL27gTuyy91ap7Nuz84OgoPp6HjNJOtSsjW79AsdSBNe1+2aH5bnhvf4Vabbxfzy" data-form-email="true">
+                    <input type="hidden" value="qfhG+6wK07B+JwF/FiAy01ef/584F85eu+BkNNo9TjMN1N8OoNIq36XUqkRb6PLBDPiXSURhdxvWz0hUwqxgb5LWx3Xdu8MZpjUBGBTA8IplIC8nxQMaTXVAxp3wmeVd" data-form-email="true">
 
                     
 
@@ -801,20 +800,20 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/jarallax/jarallax.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/jquery-mb-ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/masonry/masonry.pkgd.min.js"></script>
   <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
-  <script src="assets/mobirise-slider-video/script.js"></script>
-  <script src="assets/formoid/formoid.min.js"></script>
   <script src="assets/mobirise-gallery/player.min.js"></script>
   <script src="assets/mobirise-gallery/script.js"></script>
+  <script src="assets/mobirise-slider-video/script.js"></script>
+  <script src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
