--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-1c" data-rv-view="0" style="background-image: url(assets/images/iphone-xs-isometric-onfloor-mockup-2-1920x1560.png); padding-top: 200px; padding-bottom: 160px;">
+<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-1c" data-rv-view="0" style="background-image: url(assets/images/iphone-xs-isometric-onfloor-mockup-2-1920x1560.png); padding-top: 200px; padding-bottom: 160px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -721,7 +721,7 @@
 
 </section>
 
-<section class="mbr-footer mbr-section mbr-section-md-padding" id="contacts3-t" data-rv-view="93" style="background-color: rgb(0, 0, 0); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-footer mbr-section mbr-section-md-padding mbr-parallax-background" id="contacts3-t" data-rv-view="93" style="background-image: url(assets/images/mbr-1920x1241.jpg); padding-top: 90px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -765,7 +765,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="BtrGbiofXblPaKdCBgOuUjobLdFDo+gcjXZuPzMtglqrPGxrFn65NOpwF3+HFMU12hyVz43shLpx7OzCwDEC/IlO+65y9tIjUEKUYMmOCcJYOrThQFRAxUUEKrr2DK9A" data-form-email="true">
+                    <input type="hidden" value="awFI4eriBCNk7GM50hgkdLBODWUQJ8EojkHqk2BSCaB6Zs2XdoX8iS/OaOW3dW1EMJwMcXv+boKIEx4+AErgYotrjP1Gz2Jy0ipr/Ke00N+4kLg6o+RVLcYRGLV+c6vX" data-form-email="true">
 
                     
 
@@ -816,7 +816,7 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
