--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-1c" data-rv-view="0" style="background-image: url(assets/images/iphone-xs-isometric-onfloor-mockup-2-1920x1560.png); padding-top: 200px; padding-bottom: 160px;">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-1c" data-rv-view="0" style="background-image: url(assets/images/iphone-xs-isometric-onfloor-mockup-2-1920x1560.png); padding-top: 200px; padding-bottom: 160px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -323,6 +323,17 @@
     </div>
 </section>
 
+<section class="mbr-section mbr-section__container article" id="header3-2a" data-rv-view="140" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">C·Platform</h3>
+                <small class="mbr-section-subtitle">By John Smith posted July 20, 2016</small>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header2-15" data-rv-view="39" style="background-image: url(assets/images/wirtschaft-der-freiheit-website-header-1-1301x671.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(244, 134, 31);">
@@ -346,7 +357,7 @@
                                 <p>C·Platform은 크리스천 공유경제 실현 투명한 기부문화 확산, <br>건강한 가치증식을 추구하는 크리스천 블록체인 플랫폼입니다.</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-warning" href="index.html">&lt;더 알아보기</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-warning" href="index.html">더 알아보기 &gt;</a></div>
 
                         </div>
 
@@ -765,7 +776,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="awFI4eriBCNk7GM50hgkdLBODWUQJ8EojkHqk2BSCaB6Zs2XdoX8iS/OaOW3dW1EMJwMcXv+boKIEx4+AErgYotrjP1Gz2Jy0ipr/Ke00N+4kLg6o+RVLcYRGLV+c6vX" data-form-email="true">
+                    <input type="hidden" value="Edbfb67HjhH4Wx17T96EF4/xYtW5rbjW1DSR+8ap96cxdQQMnxZn/hY+PtFIFBWCO0nvtcvs4EnFfVKejU2cIeCjn3jkN11yxuXSAC0aIMZeqfJGaaog9E7Ir6eK0cwo" data-form-email="true">
 
                     
 
